--- a/home.html
+++ b/home.html
@@ -1,1 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Document</title>
+<h1></h1>
+<link rel="stylesheet", href="style.css">
+</head>
